# WinMTR-refresh

./: .clangformat  .gitignore  .mega-linter.yml  CMakeLists.txt  CWinMTRCommandLineParser.cpp  CWinMTRCommandLineParser.h  CWinMTRCommandLineParser.ixx  IWinMTROptionsProvider.hpp  IWinMTROptionsProvider.ixx  README.md  WinMTR.exe.manifest  WinMTR.rc  WinMTR.sln  WinMTR.vcxproj  WinMTRConfig.h.in  WinMTRDialog-ClassDef.ixx  WinMTRDialog-StateMachine.cpp  WinMTRDialog-display.cpp  WinMTRDialog-exporter.cpp  WinMTRDialog-registry.cpp  WinMTRDialog-tracing.cpp  WinMTRDialog.cpp  WinMTRDialog.h  WinMTRDialog.ixx  WinMTRDnsUtil.ixx  WinMTRGlobal.cpp  WinMTRGlobal.h  WinMTRHelp.cpp  WinMTRHelp.h  WinMTRHelp.ixx  WinMTRICMPPIOdef.h  WinMTRICMPUtils.ixx  WinMTRIPUtils.ixx  WinMTRLicense.cpp  WinMTRLicense.h  WinMTRLicense.ixx  WinMTRLogging.cpp  WinMTRLogging.h  WinMTRMain.cpp  WinMTRMain.h  (+24 more)
.github/: dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  megalinter.yml
